apps/browser/service-webrtc.yml
apiVersion: v1
kind: Service
metadata:
  name: browser-webrtc
  namespace: browser
  labels:
    app: browser-webrtc
spec:
  type: LoadBalencer
  ports:
    - port: 52000
      targetPort: 52000
      protocol: UDP
  selector:
    app: browser
