apps/browser/service.yml
apiVersion: v1
kind: Service
metadata:
  name: browser
  namespace: browser
  labels:
    app: browser
spec:
  type: NodePort
  ports:
    # Maps the container's port to 80. If you want to use it on a different port, change it here.
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: browser
