apps/browser/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: browser
  namespace: browser
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: browser.kube.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: browser
            port:
              number: 8080
